# gtkmm4-with-libadwaita

./: CMakeLists.txt  README.md
resources/ui/: example.xml
src/: CMakeLists.txt  main.cpp
